# fastapi-crud

./: Dockerfile  Makefile  alembic.ini  backup.py  docker-compose.yml  jwt_token.py  log.txt  main.py  pyproject.toml  requirements.txt  schema.py  schemas.py  sql_app.db  test_main.py
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 15a6304c668d_new_migrations.py  208d411f3ed9_column_fix.py  7c94b626be63_create_table_user.py  9a45677017b6_re_migrations.py  a54cb771c4d8_initial_migrations.py
api/: courses.py  users.py
api/utils/: courses.py  users.py
app/: main.py
app/common/: config.py
app/database/: conn.py
app/database/models/: course.py  mixins.py  user.py
app/migrations/: env.py
app/migrations/versions/: 07f1f42b2b5a_db_test.py
app/router/: courses.py  index.py  users.py
app/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
migrations/: env.py
migrations/versions/: 075cde9213b6_new_migation.py
schemas/: user.py
sql_app/: crud.py  database.py  main.py  models.py
static/: index.html
sub_app/: dependencies.py  main.py
sub_app/routers/: __init__.py  items.py  users.py
