[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["jewon119 <jewon119@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_crud"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
alembic = "^1.11.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
